--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8000 
 DATABASE=mongodb://localhost/ecomerce
 JWT_SECRET=bo31ziujn07neb89ane91
+BRAINTREE_MERCHANT_ID=wy83yrnpkkp65hpw
+BRAINTREE_PUBLIC_KEY=8qd4qb3ngbt7d7y6
+BRAINTREE_PRIVATE_KEY=6409b43f5d18a3a2d68653b6aac71d5d
